resolves #210 add shared intents facility
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/intents/intents.component.css
+++ b/nlp/admin/web/src/app/intents/intents.component.css
@@ -23,3 +23,23 @@
   position: relative;
   top: 7px;
 }
+
+.intent {
+  width:200px;
+}
+
+.shared {
+  vertical-align: top;
+}
+
+.shared_list {
+  padding-top: 10px;
+}
+
+.states {
+  vertical-align: top;
+}
+
+.actions {
+  white-space: nowrap;
+}
