bot admin: add error message when no bot configuration available
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/shared/select-bot/select-bot.component.html
+++ b/bot/admin/web/src/app/shared/select-bot/select-bot.component.html
@@ -14,7 +14,7 @@
   ~ limitations under the License.
   -->
 
-<div *ngIf="configurations && configurations.length === 0">
+<div *ngIf="!configurations || configurations.length === 0">
   <h3>No bot configuration detected.</h3>
 </div>
 <div *ngIf="configurations && configurations.length !== 0">
