JARVISFT-1305 : Basic Design

--- a/bot/admin/web/src/app/bot/i18n/i18n-label.component.css
+++ b/bot/admin/web/src/app/bot/i18n/i18n-label.component.css
@@ -14,6 +14,123 @@
  * limitations under the License.
  */
 
+ .i18n-label {
+   width: 100%;
+   display: block;
+   max-width: 800px;
+   margin-bottom: 60px;
+   padding: 0 20px;
+
+   font-family: Roboto,"Helvetica Neue",sans-serif;
+ }
+
+ .i18n-label__title {
+   display: flex;
+   align-items: baseline;
+   margin-bottom: 20px;
+ }
+
+ .i18n-label__title__label {
+   margin-right: 20px;
+
+   font-size: 20px;
+ }
+
+ .i18n-label__title__intent {
+   font-size: 13px;
+
+   opacity: 0.5;
+ }
+
+ .i18n-label__title__delete {
+   margin-left: auto;
+ }
+
+ .i18n-label__entry {
+   display: flex;
+   flex-wrap: wrap;
+   margin-bottom: 15px;
+ }
+
+ .i18n-label__entry__locale {
+   margin-left: 20px;
+
+   text-transform: uppercase;
+   font-size: 13px;
+ }
+
+ .i18n-label__entry__mode {
+    margin-left: 15px;
+ }
+
+ .i18n-label__entry__mode__icon {
+   width: auto;
+
+   font-size: 15px;
+ }
+
+ .i18n-label__entry__connector {
+   margin-left: 15px;
+ }
+
+ .i18n-label__entry__connector__img {
+   width: 20px;
+   height: auto;
+ }
+
+ .i18n-label__entry__input {
+   flex-grow: 1;
+   margin-left: 15px;
+ }
+
+ .i18n-label__entry__input__textarea {
+   width: 100%;
+   height: 23px;
+
+   border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+ }
+
+ .i18n-label__entry__connectors {
+   display: block;
+   flex-basis: 100%;
+   margin-left: 70px;
+ }
+
+ .i18n-label__entry__validation {
+   padding-top: 7px;
+ }
+
+ .i18n-label__entry__alternative-management {
+   margin-right: 5px;
+ }
+
+ .i18n-label__entry__validation {
+   margin-right: 10px;
+ }
+
+ .i18n-label__entry__delete {
+
+ }
+
+ .i18n-label__entry__delete .mat-button {
+   padding: 0;
+   min-width: 0;
+   position: relative;
+   bottom: 1px;
+ }
+
+ .i18n-label__entry__alternatives {
+   flex-basis: 100%;
+   display: flex;
+   margin-right: 49px;
+ }
+
+  .i18n-label__entry__alternatives .i18n-label__entry__locale,
+  .i18n-label__entry__alternatives .i18n-label__entry__mode,
+  .i18n-label__entry__alternatives .i18n-label__entry__connector {
+    opacity: 0.5;
+  }
+
 
 .i18n {
   font-size: 10px;
@@ -65,4 +182,3 @@
   width:24px;
   height:24px;
 }
-
