resolves #223 can't create two intents with the same name in different NLP applications
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/intents/intents.component.css
+++ b/nlp/admin/web/src/app/intents/intents.component.css
@@ -28,6 +28,14 @@
   width:200px;
 }
 
+.intent_name {
+  font-size: larger;
+}
+
+.shared_application_label {
+  font-size: smaller;
+}
+
 .shared {
   vertical-align: top;
 }
