resolves #233 bot admin: allow to update the configuration from the admin
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/configuration/bot/bot-configuration.component.html
+++ b/bot/admin/web/src/app/configuration/bot/bot-configuration.component.html
@@ -37,6 +37,9 @@
     <input mdInput placeholder="Application identifier" [(ngModel)]="configuration.applicationId">
   </md-input-container>
   <md-input-container>
+    <input mdInput placeholder="Relative REST path" [(ngModel)]="configuration.path">
+  </md-input-container>
+  <md-input-container>
     <input mdInput placeholder="Application base url" [(ngModel)]="configuration.baseUrl">
   </md-input-container>
   <md-input-container>
