resolves #241 admin: better design for sidenav
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/bot-admin-app.component.css
+++ b/bot/admin/web/src/app/bot-admin-app.component.css
@@ -18,11 +18,7 @@
   padding: 10px;
   min-width: 100px;
   overflow-y: visible;
-}
-
-.menu-close {
-  position: absolute;
-  right: 0;
+  background-color:#fafafa;
 }
 
 .tock-menu-button {
