--- a/nlp/admin/web/src/app/nlp-admin-app.component.html
+++ b/nlp/admin/web/src/app/nlp-admin-app.component.html
@@ -16,21 +16,15 @@
 
 <md-sidenav-container>
   <md-sidenav #sidenav mode="side" class="tock-sidenav">
-    <button md-icon-button class="menu-close" #closeStartButton (click)="sidenav.close()">
-      <md-icon class="md-24">close</md-icon>
-    </button>
-    <p></p>
-    <md-list>
-      <md-list-item *ngIf="state.hasRole(UserRole.admin)">
-        <a routerLink="/applications">Applications</a>
+    <md-nav-list>
+      <md-list-item (click)="sidenav.close()">
+        <md-icon aria-hidden="true" mdListIcon svgIcon="logo"></md-icon>
+        <h3>Tock</h3>
       </md-list-item>
-      <md-list-item *ngIf="state.hasRole(UserRole.nlpUser)">
-        <a routerLink="/nlp/inbox">NLP</a>
-      </md-list-item>
-      <md-list-item *ngIf="state.hasRole(UserRole.nlpUser)">
-        <a routerLink="/quality/log-stats">NLP QA</a>
-      </md-list-item>
-    </md-list>
+      <a *ngIf="state.hasRole(UserRole.admin)" md-list-item routerLink="/applications">Applications</a>
+      <a *ngIf="state.hasRole(UserRole.nlpUser)" md-list-item routerLink="/nlp/inbox">NLP</a>
+      <a *ngIf="state.hasRole(UserRole.nlpUser)" md-list-item routerLink="/quality/log-stats">NLP QA</a>
+    </md-nav-list>
   </md-sidenav>
 
   <md-toolbar color="primary">
@@ -48,14 +42,16 @@
                [ngModel]="state.currentApplication.name"
                class="select-application">
       <md-option *ngFor="let app of state.applications"
-                 [value]="app.name">{{ app.name }}</md-option>
+                 [value]="app.name">{{ app.name }}
+      </md-option>
     </md-select>
 
     <md-select *ngIf="state.currentApplication"
                (change)="changeLocale($event.value)"
                [ngModel]="state.currentLocale">
       <md-option *ngFor="let l of state.currentApplication.supportedLocales"
-                 [value]="l">{{ state.localeName(l) }}</md-option>
+                 [value]="l">{{ state.localeName(l) }}
+      </md-option>
     </md-select>
 
     <button *ngIf="auth.isLoggedIn()" class="tock-icon-button" (click)="auth.logout()" md-tooltip="Logout">
