--- a/bot/admin/web/src/app/configuration/bot/bot-configuration.component.html
+++ b/bot/admin/web/src/app/configuration/bot/bot-configuration.component.html
@@ -47,7 +47,7 @@
   </md-select>
 
   <md-input-container>
-    <input mdInput placeholder="Bot identifier" [(ngModel)]="configuration.botId">
+    <input mdInput placeholder="Bot identifier" [(ngModel)]="configuration.botId" disabled>
   </md-input-container>
   <md-input-container>
     <input mdInput placeholder="Connector identifier" [(ngModel)]="configuration.applicationId">
