--- a/bot/admin/web/src/app/configuration/bot/bot-configuration.component.html
+++ b/bot/admin/web/src/app/configuration/bot/bot-configuration.component.html
@@ -88,6 +88,36 @@
       <input mdInput placeholder="Restricted project ids" [(ngModel)]="configuration.parameters['_project_ids']">
     </md-input-container>
   </md-expansion-panel>
+  <md-expansion-panel *ngIf="configuration.connectorType.isSlack()">
+    <md-expansion-panel-header>
+      <mat-panel-title>Slack config</mat-panel-title>
+      <mat-panel-description>Parameters</mat-panel-description>
+    </md-expansion-panel-header>
+    <md-input-container class="long-text">
+      <input mdInput placeholder="Token 1" [(ngModel)]="configuration.parameters['outToken1']">
+    </md-input-container>
+    <md-input-container class="long-text">
+      <input mdInput placeholder="Token 2" [(ngModel)]="configuration.parameters['outToken2']">
+    </md-input-container>
+    <md-input-container class="long-text">
+      <input mdInput placeholder="Token 3" [(ngModel)]="configuration.parameters['outToken3']">
+    </md-input-container>
+  </md-expansion-panel>
+  <md-expansion-panel *ngIf="configuration.connectorType.isAlexa()">
+    <md-expansion-panel-header>
+      <mat-panel-title>Alexa config</mat-panel-title>
+      <mat-panel-description>Parameters</mat-panel-description>
+    </md-expansion-panel-header>
+    <md-input-container class="long-text">
+      <input mdInput placeholder="Project ids" [(ngModel)]="configuration.parameters['_project_ids']">
+    </md-input-container>
+    <md-input-container class="long-text">
+      <input mdInput placeholder="Request timestamp (in ms)" [(ngModel)]="configuration.parameters['_project_timestamp']">
+    </md-input-container>
+    <md-input-container class="long-text">
+      <input mdInput placeholder="Alexa mapper class" [(ngModel)]="configuration.parameters['_mapper']">
+    </md-input-container>
+  </md-expansion-panel>
   <md-card-actions>
     <button md-button color="warn" (click)="remove()">{{configuration._id ? 'Delete' : 'Cancel'}}</button>
     <button md-raised-button color="primary" (click)="update()">{{configuration._id ? 'Update' : 'Create'}}</button>
