#259 avoid multi-namespace blocking issue
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/intents/intents.component.html
+++ b/nlp/admin/web/src/app/intents/intents.component.html
@@ -38,13 +38,13 @@
           <span *ngFor="let e of i.entities">
           <md-icon [style.color]="e.entityColor" class="entity_icon">extension</md-icon>
           <span [style.background-color]="e.entityColor">{{e.qualifiedName(state.user)}}</span>
-          <button *ngIf="i.applications.length === 1" md-icon-button (click)="removeEntity(i, e)">
+          <button *ngIf="!state.intentExistsInOtherApplication(i.name)" md-icon-button (click)="removeEntity(i, e)">
             <md-icon>remove_circle_outline</md-icon>
           </button>
           </span>
         </td>
         <td class="shared">
-          <md-select *ngIf="i.applications.length === 1"
+          <md-select *ngIf="!state.intentExistsInOtherApplication(i.name)"
                      class="intent"
                      placeholder="Add shared intent"
                      (change)="addSharedIntent(i, $event.value)">
@@ -53,13 +53,13 @@
             </md-option>
           </md-select>
           <div *ngIf="i.sharedIntents.length !== 0" class="shared_list">
-            <md-chip-list *ngIf="i.applications.length === 1" mdTooltip="Shared intent - click to remove">
+            <md-chip-list *ngIf="!state.intentExistsInOtherApplication(i.name)" mdTooltip="Shared intent - click to remove">
               <md-chip *ngFor="let intentId of i.sharedIntents" color="accent" selected="true"
                        (click)="removeSharedIntent(i, intentId)">
                 {{state.findIntentById(intentId)?.name}}
               </md-chip>
             </md-chip-list>
-            <md-chip-list *ngIf="i.applications.length !== 1" mdTooltip="Shared intent">
+            <md-chip-list *ngIf="state.intentExistsInOtherApplication(i.name)" mdTooltip="Shared intent">
               <md-chip *ngFor="let intentId of i.sharedIntents" color="accent" selected="true">
                 {{state.findIntentById(intentId)?.name}}
               </md-chip>
@@ -67,18 +67,18 @@
           </div>
         </td>
         <td class="states">
-          <button *ngIf="i.applications.length === 1" md-button (click)="addState(i)">
+          <button *ngIf="!state.intentExistsInOtherApplication(i.name)" md-button (click)="addState(i)">
             <md-icon>add_box</md-icon>
             Add state
           </button>
           <div *ngIf="i.mandatoryStates.length !== 0" class="shared_list">
-            <md-chip-list *ngIf="i.applications.length === 1" mdTooltip="Mandatory states - click to delete">
+            <md-chip-list *ngIf="!state.intentExistsInOtherApplication(i.name)" mdTooltip="Mandatory states - click to delete">
               <br>
               <md-chip *ngFor="let s of i.mandatoryStates" color="accent" selected="true" (click)="removeState(i, s)">
                 {{s}}
               </md-chip>
             </md-chip-list>
-            <md-chip-list *ngIf="i.applications.length !== 1" mdTooltip="Mandatory states">
+            <md-chip-list *ngIf="state.intentExistsInOtherApplication(i.name)" mdTooltip="Mandatory states">
               <br>
               <md-chip *ngFor="let s of i.mandatoryStates" color="accent" selected="true">
                 {{s}}
